[package]
name = "oxilib"
version = "0.1.1"
edition = "2021"
description = "Library for Oxi-applications."
license = "GPL-3.0-only"
repository = "https://github.com/DashieTM/OxiLib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
directories-next = "2.0.0"
